--- a/static/readme.adoc
+++ b/static/readme.adoc
@@ -1,12 +1,11 @@
 ```
-=================================================
-        _     _ _            _        _   _      
- __   _(_)___(_) |_      ___| |_ __ _| |_(_) ___ 
- \ \ / / / __| | __|____/ __| __/ _` | __| |/ __|
-  \ V /| \__ \ | ||_____\__ \ || (_| | |_| | (__ 
-   \_/ |_|___/_|\__|    |___/\__\__,_|\__|_|\___|
-                                                 
-=================================================
+        _      _ __             __        __  _     
+ _   __(_)____(_) /_      _____/ /_____ _/ /_(_)____
+| | / / / ___/ / __/_____/ ___/ __/ __ `/ __/ / ___/
+| |/ / (__  ) / /_/_____(__  ) /_/ /_/ / /_/ / /__  
+|___/_/____/_/\__/     /____/\__/\__,_/\__/_/\___/  
+                                                    
+       ¯\_(ツ)_/¯ :: [html / css / bulma]
 ```
 
 = visit-static =
